--- a/lecm-contracts/repo/src/main/config/reportdefinitions/docflow-timings.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/docflow-timings.jrxml
@@ -105,9 +105,9 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="29" splitType="Stretch">
+		<band height="26" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="550" height="29"/>
+				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="550" height="26"/>
 				<textElement>
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
@@ -131,143 +131,143 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" stretchType="RelativeToBandHeight" x="1" y="0" width="550" height="60" backcolor="#DCDCDC"/>
+				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" stretchType="RelativeToBandHeight" x="1" y="0" width="549" height="70" backcolor="#DCDCDC"/>
 			</rectangle>
 			<textField>
-				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" x="5" y="3" width="30" height="56"/>
+				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" x="5" y="3" width="30" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" isItalic="false" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" x="38" y="3" width="120" height="56"/>
+				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" x="38" y="3" width="120" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" markup="none">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Название"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" x="160" y="3" width="33" height="56"/>
+				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" x="160" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Черновик"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" x="195" y="3" width="33" height="56"/>
+				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" x="195" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Проект"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" x="230" y="3" width="33" height="56"/>
+				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" x="230" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["На согласовании"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" x="265" y="3" width="33" height="56"/>
+				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" x="265" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Согласован"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="1474ea49-0456-45c0-b1a1-745c3a43fd32" x="300" y="3" width="33" height="56"/>
+				<reportElement uuid="1474ea49-0456-45c0-b1a1-745c3a43fd32" x="300" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["На доработке"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement uuid="563ebd11-e1ac-4300-b8c1-e4642fc8de4d" x="335" y="3" width="33" height="56"/>
+				<reportElement uuid="563ebd11-e1ac-4300-b8c1-e4642fc8de4d" x="335" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["На подписаниии"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="e7ccdb77-cdd6-4cb0-ad8f-2e9d222a9b0e" x="370" y="3" width="33" height="56"/>
+				<reportElement uuid="e7ccdb77-cdd6-4cb0-ad8f-2e9d222a9b0e" x="370" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Подписан"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="184212ed-36dd-4d35-b1a8-eff82aef37ed" x="405" y="3" width="33" height="56"/>
+				<reportElement uuid="184212ed-36dd-4d35-b1a8-eff82aef37ed" x="405" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Подписание контрагентом"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="4981da03-4762-430e-83a1-27dccb756c09" x="440" y="3" width="33" height="56"/>
+				<reportElement uuid="4981da03-4762-430e-83a1-27dccb756c09" x="440" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Зарегистрирован"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="84f10590-57a8-4121-8c89-4633c92d4af2" x="475" y="3" width="33" height="56"/>
+				<reportElement uuid="84f10590-57a8-4121-8c89-4633c92d4af2" x="475" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Действует"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="35182571-f28b-41a9-b79c-a7ead30a56b5" x="510" y="3" width="33" height="56"/>
+				<reportElement uuid="35182571-f28b-41a9-b79c-a7ead30a56b5" x="510" y="3" width="33" height="66"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" rotation="Left">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Другие"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="78d10133-2d29-4069-b91c-504a32934661" x="36" y="0" width="1" height="60"/>
+				<reportElement uuid="78d10133-2d29-4069-b91c-504a32934661" x="36" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="4133164b-c580-40e9-8e86-9e07fee9b342" x="159" y="0" width="1" height="60"/>
+				<reportElement uuid="4133164b-c580-40e9-8e86-9e07fee9b342" x="159" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="af115643-3f47-483a-8105-dcc34847b049" x="194" y="0" width="1" height="60"/>
+				<reportElement uuid="af115643-3f47-483a-8105-dcc34847b049" x="194" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="8995aaf2-a1f8-4593-b9bd-1c076ce692f5" x="229" y="0" width="1" height="60"/>
+				<reportElement uuid="8995aaf2-a1f8-4593-b9bd-1c076ce692f5" x="229" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="56ae79d3-e30a-4f27-a518-b279ac2da993" x="264" y="0" width="1" height="60"/>
+				<reportElement uuid="56ae79d3-e30a-4f27-a518-b279ac2da993" x="264" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="3c71b1c6-be1b-47d9-840b-01552089b6a5" x="299" y="0" width="1" height="60"/>
+				<reportElement uuid="3c71b1c6-be1b-47d9-840b-01552089b6a5" x="299" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="c32b6c47-4755-4756-9686-15b0ac426288" x="334" y="0" width="1" height="60"/>
+				<reportElement uuid="c32b6c47-4755-4756-9686-15b0ac426288" x="334" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="f1ac5779-a77d-48d5-9b82-6161d34284d7" x="369" y="0" width="1" height="60"/>
+				<reportElement uuid="f1ac5779-a77d-48d5-9b82-6161d34284d7" x="369" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="52d80997-885c-4778-a64b-4a3b843f6bcc" x="404" y="0" width="1" height="60"/>
+				<reportElement uuid="52d80997-885c-4778-a64b-4a3b843f6bcc" x="404" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="95a859c7-1d33-4855-97a1-930b637962c9" x="439" y="0" width="1" height="60"/>
+				<reportElement uuid="95a859c7-1d33-4855-97a1-930b637962c9" x="439" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="4705be60-8b6f-4832-8192-22ab577729e2" x="474" y="0" width="1" height="60"/>
+				<reportElement uuid="4705be60-8b6f-4832-8192-22ab577729e2" x="474" y="0" width="1" height="70"/>
 			</line>
 			<line>
-				<reportElement uuid="2f4ca894-025f-44fc-b5c3-d47ae6250990" x="509" y="0" width="1" height="60"/>
+				<reportElement uuid="2f4ca894-025f-44fc-b5c3-d47ae6250990" x="509" y="0" width="1" height="70"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="24" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="0" width="550" height="24" backcolor="#FFFFFF"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="0" width="550" height="23" backcolor="#FFFFFF"/>
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="2" y="3" width="30" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -374,56 +374,56 @@
 				</textField>
 			</frame>
 			<line>
-				<reportElement uuid="d905283e-8430-40da-a9e5-2d1ce6418c36" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="24"/>
+				<reportElement uuid="d905283e-8430-40da-a9e5-2d1ce6418c36" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="f8491e6d-c03d-466d-a8b0-058a93d6ba80" stretchType="RelativeToBandHeight" x="36" y="0" width="1" height="24"/>
+				<reportElement uuid="f8491e6d-c03d-466d-a8b0-058a93d6ba80" stretchType="RelativeToBandHeight" x="36" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="ef71b15b-efe5-4926-b096-8c9786654474" stretchType="RelativeToBandHeight" x="159" y="0" width="1" height="24"/>
+				<reportElement uuid="ef71b15b-efe5-4926-b096-8c9786654474" stretchType="RelativeToBandHeight" x="159" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="1bdd1785-4dc7-4a2a-b77e-71a909f87646" stretchType="RelativeToBandHeight" x="194" y="0" width="1" height="24"/>
+				<reportElement uuid="1bdd1785-4dc7-4a2a-b77e-71a909f87646" stretchType="RelativeToBandHeight" x="194" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="0d3d2469-117b-41ab-9e12-0b3c484ce915" stretchType="RelativeToBandHeight" x="229" y="0" width="1" height="24"/>
+				<reportElement uuid="0d3d2469-117b-41ab-9e12-0b3c484ce915" stretchType="RelativeToBandHeight" x="229" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="450f5a30-0014-4ef3-8baf-1dbd28f4bb20" stretchType="RelativeToBandHeight" x="264" y="0" width="1" height="24"/>
+				<reportElement uuid="450f5a30-0014-4ef3-8baf-1dbd28f4bb20" stretchType="RelativeToBandHeight" x="264" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="b19bf739-48c4-4cee-9307-3017c62db8b4" stretchType="RelativeToBandHeight" x="299" y="0" width="1" height="24"/>
+				<reportElement uuid="b19bf739-48c4-4cee-9307-3017c62db8b4" stretchType="RelativeToBandHeight" x="299" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="7d4e555d-fe40-4b37-81ff-00630410ab6e" stretchType="RelativeToBandHeight" x="334" y="0" width="1" height="24"/>
+				<reportElement uuid="7d4e555d-fe40-4b37-81ff-00630410ab6e" stretchType="RelativeToBandHeight" x="334" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="6d1be23d-a96f-4baa-ba18-8b7bdcd85602" stretchType="RelativeToBandHeight" x="369" y="0" width="1" height="24"/>
+				<reportElement uuid="6d1be23d-a96f-4baa-ba18-8b7bdcd85602" stretchType="RelativeToBandHeight" x="369" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="917c373a-1df3-463a-beeb-90f1ef2be3e5" stretchType="RelativeToBandHeight" x="404" y="0" width="1" height="24"/>
+				<reportElement uuid="917c373a-1df3-463a-beeb-90f1ef2be3e5" stretchType="RelativeToBandHeight" x="404" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="0ef41442-2be7-4196-863b-8d5e93eefb20" stretchType="RelativeToBandHeight" x="439" y="0" width="1" height="24"/>
+				<reportElement uuid="0ef41442-2be7-4196-863b-8d5e93eefb20" stretchType="RelativeToBandHeight" x="439" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="4d900bda-2576-46cd-94ba-9b87ed29b4de" stretchType="RelativeToBandHeight" x="474" y="0" width="1" height="24"/>
+				<reportElement uuid="4d900bda-2576-46cd-94ba-9b87ed29b4de" stretchType="RelativeToBandHeight" x="474" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="ce40b258-c3bd-4435-893d-e2085fb387d4" stretchType="RelativeToBandHeight" x="509" y="0" width="1" height="24"/>
+				<reportElement uuid="ce40b258-c3bd-4435-893d-e2085fb387d4" stretchType="RelativeToBandHeight" x="509" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="5facd49c-579a-4189-b1ad-c707ee7b6199" stretchType="RelativeToBandHeight" x="550" y="0" width="1" height="24"/>
+				<reportElement uuid="5facd49c-579a-4189-b1ad-c707ee7b6199" stretchType="RelativeToBandHeight" x="550" y="0" width="1" height="23"/>
 			</line>
 			<line>
-				<reportElement uuid="bc08800b-04f4-43ff-8c4a-42f678381a74" positionType="FixRelativeToBottom" x="1" y="23" width="550" height="1"/>
+				<reportElement uuid="bc08800b-04f4-43ff-8c4a-42f678381a74" positionType="FixRelativeToBottom" x="1" y="22" width="550" height="1"/>
 			</line>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="25" splitType="Stretch">
+		<band height="24" splitType="Stretch">
 			<frame>
-				<reportElement uuid="6c80e423-e8ea-484b-ba0b-b37c6f9f6319" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="0" width="550" height="24" backcolor="#FFFFFF"/>
+				<reportElement uuid="6c80e423-e8ea-484b-ba0b-b37c6f9f6319" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="1" width="547" height="22" isPrintInFirstWholeBand="true" backcolor="#FFFFFF"/>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
 					<reportElement uuid="55395b3a-5cfd-4fe4-a486-fd67d5653b9f" stretchType="RelativeToBandHeight" x="160" y="2" width="33" height="20"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -513,7 +513,7 @@
 					<textFieldExpression><![CDATA[$V{colAvg11}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="f81ce85c-c007-42fa-92af-3da1285e2edc" x="38" y="3" width="120" height="20"/>
+					<reportElement uuid="f81ce85c-c007-42fa-92af-3da1285e2edc" x="38" y="2" width="120" height="20"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle" markup="none">
 						<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
@@ -521,7 +521,7 @@
 				</textField>
 			</frame>
 			<line>
-				<reportElement uuid="99cb0f4f-6bc6-4c92-999c-728149525ed0" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="24"/>
+				<reportElement uuid="ab38a3aa-4ec1-4f3e-898c-ee22a9924c8d" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="24"/>
 			</line>
 			<line>
 				<reportElement uuid="8290a542-ae3b-4aac-b5af-f4854bfc0f1e" stretchType="RelativeToBandHeight" x="36" y="0" width="1" height="24"/>
@@ -560,10 +560,10 @@
 				<reportElement uuid="7e365a01-b62d-458b-8969-d113596aadaa" stretchType="RelativeToBandHeight" x="509" y="0" width="1" height="24"/>
 			</line>
 			<line>
-				<reportElement uuid="0ad3e174-74c2-4ace-b7bf-b619fec14a5f" stretchType="RelativeToBandHeight" x="550" y="0" width="1" height="24"/>
+				<reportElement uuid="f5aac7d4-0f9e-4e50-93ac-0032c7cde45c" stretchType="RelativeToBandHeight" x="550" y="0" width="1" height="24"/>
 			</line>
 			<line>
-				<reportElement uuid="9532e3c1-dd54-466d-88ef-5aa0b7d0340c" positionType="FixRelativeToBottom" x="1" y="24" width="550" height="1"/>
+				<reportElement uuid="8c543d27-5c53-4ef2-bf9f-607c431befd6" positionType="FixRelativeToBottom" x="0" y="23" width="550" height="1"/>
 			</line>
 		</band>
 	</columnFooter>
