ALF-982 : Редизайн главной страницы договоров и страницы со списком договоров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2837 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-summary.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-summary.css
@@ -25,6 +25,6 @@
 .grid .dashlet.contracts-summary .body .row .column.second a,
 .grid .dashlet.contracts-summary .body .row .column.second a:hover,
 .grid .dashlet.contracts-summary .body .row .column.second a:visited {
-    color: #009fe1;
+    color: #68a0c8;
     font-weight: bold;
 }
