ALF-982 : Редизайн ... : дашлет участников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2854 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-members-list.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-members-list.css
@@ -30,7 +30,32 @@
     margin-left: 3%;
 }
 
-.detail-list-item .person a,.detail-list-item .person a:visited {
+.detail-list-item .person a,
+.detail-list-item .person a:visited {
     color: #6CA5CE;
     text-decoration: underline;
 }
+
+/* Dashlet styles */
+.dashlet.members .detail-list-item {
+    border-bottom: none;
+    overflow: hidden;
+}
+.dashlet.members .detail-list-item:first-of-type {
+    padding-top: 15px;
+}
+.dashlet.members .detail-list-item .avatar,
+.dashlet.members .detail-list-item .avatar img {
+    width: 40px;
+    height: 40px;
+}
+.dashlet.members .detail-list-item .person a,
+.dashlet.members .detail-list-item .person a:hover,
+.dashlet.members .detail-list-item .person a:visited {
+    text-decoration: none;
+}
+.dashlet.members .detail-list-item .person > div {
+    color: #969696;
+    padding-left: 5px;
+}
+
